test/tests/errors/error-procedure-non-access-operator.sm
// false
// false
// false
/**/
/*
1
*/

program {
    proc a() {
        output 1;
    }

    true ? a : a();
}